# free-genai-bootcamp-2025

./: LICENSE  README.md  implementation-plan.md
docs/: llm_iterations.md  session_context.md
vocab-importer/: .env.example  .gitignore  README.md  __init__.py  app.py  implementation-plan.md  pyproject.toml  pytest.ini  requirements.txt
vocab-importer/.streamlit/: secrets.toml.example
vocab-importer/components/: actions.py  activity.py  footer.py  header.py  sidebar.py  stats.py  styles.py  vocab_generator.py
vocab-importer/docs/: context_restoration.md  llm_iterations.md  prompt_restoration.md  session_context.md
vocab-importer/prompt_generation_by_chatgtp-03-mini/: arabic_vocab_prompt.md  french_vocab_prompt.md  japanese_vocab_prompt.md  prompt_chatgtp_vocab_importer.txt  spanish_vocab_prompt.md
vocab-importer/prompt_templates/: arabic_template.md  base_template.md  example_prompt_ja.md  french_template.md  japanese_template.md
vocab-importer/prompt_templates/versions/v1.0/: arabic_template.md  base_template.md  french_template.md  japanese_template.md  spanish_template.md
vocab-importer/scripts/: test_generation.py
vocab-importer/tech-specs/: Vocab_Importer_Feasibility_Analysis_ChatGTP.md  examples_vocab_importer.json  technical-specs.md
vocab-importer/tests/: conftest.py  test_app.py  test_file_manager.py  test_llm_client.py  test_prompt_manager.py  test_validators.py  test_vocab_file.py  test_vocab_generator.py
vocab-importer/utils/: __init__.py  file_manager.py  llm_client.py  prompt_manager.py  validators.py  vocab_file.py  vocab_generator.py
(+133 files in other folders)
